# saas-factory

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
docker/: Dockerfile.vault_client.dev
libs/nats-actor/: Cargo.toml
libs/nats-actor/src/: lib.rs  publisher.rs  subscriber.rs
scripts/vault/: 00_setup_secrets.sh
services/auth-service/: .dockerignore  Cargo.toml  Dockerfile.dev  curl.http
services/auth-service/config/: base.toml  development.toml
services/auth-service/src/: context.rs  lib.rs  main.rs  secrets.rs  settings.rs
services/auth-service/src/controller/: auth_controller.rs  login_controller.rs  mod.rs  router.rs  user_controller.rs
services/auth-service/src/model/: mod.rs
services/auth-service/src/model/domain/: login.rs  user.rs
services/auth-service/src/model/request/login/: login_request.rs
services/auth-service/src/repository/: login_repository.rs  mod.rs  user_repository.rs
services/common/: Cargo.toml
services/common/src/: error.rs  lib.rs
services/common/src/client/: cache_redis.rs  db_mongo.rs  db_postgres.rs  mod.rs  sm_vault.rs
services/common/src/model/: mod.rs
services/common/src/model/domain/: pagination.rs
services/common/src/model/event/: mod.rs
services/common/src/model/event/v1/: mod.rs
services/common/src/model/event/v1/auth/: mod.rs
services/common/src/model/request/: page_request.rs
services/common/src/util/: actix_json_config.rs  app_env.rs  configuration.rs  mod.rs  telemetry.rs
services/common/src/utils/: app_env.rs  configuration.rs  mod.rs  telemetry.rs
services/notification-service/: Cargo.toml  Dockerfile.dev  curl.http
services/notification-service/config/: base.toml  development.toml
services/notification-service/src/: context.rs  lib.rs  main.rs  secrets.rs  settings.rs
services/notification-service/src/actor/: email_sender.rs  event_stream_handler.rs  mod.rs
services/notification-service/src/controller/: health_controller.rs  mod.rs  notification_controller.rs  router.rs
services/notification-service/src/repository/: mod.rs
services/tenant-service/: Cargo.toml  Dockerfile.dev  curl.http
services/tenant-service/config/: base.toml  development.toml
services/tenant-service/src/: lib.rs  main.rs  secrets.rs
services/tenant-service/src/controller/: mod.rs  router.rs  tenant_controller.rs
services/tenant-service/src/model/domain/: tenant.rs
services/tenant-service/src/repository/: mod.rs  tenant_repository.rs
services/user-service/: Cargo.toml  Dockerfile.dev  curl.http
services/user-service/config/: base.toml  development.toml
services/user-service/src/: context.rs  errors.rs  lib.rs  main.rs  settings.rs
services/user-service/src/controller/: health_controller.rs  mod.rs  router.rs  user_controller.rs
services/user-service/src/controllers/: health_controller.rs  mod.rs  router.rs
services/user-service/src/model/domain/: mod.rs  user.rs
services/user-service/src/model/request/: mod.rs
services/user-service/src/model/request/user/: register_user.rs  update_user.rs
services/user-service/src/model/response/: health_response.rs  mod.rs  page_response.rs
services/user-service/src/repository/: user_repository.rs
services/user-service/src/service/: mod.rs  web_service.rs
services/user-service/src/services/: web_service.rs
