[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["gaurav@mypass.id"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# message packing
serde = "1.0.115"

# configuration
config = { version = "0.11", default-features = false, features = ["toml"] }