[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["gaurav@mypass.id"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# message packing
serde = "1.0.115"

# configuration
config = { version = "0.11", default-features = false, features = ["toml"] }

# Tracing
tracing = "0.1.29"
tracing-appender = "0.2"
tracing-futures = "0.2"
opentelemetry = { version = "0.16", features = ["trace", "metrics", "rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = { version = "0.16" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"


