[package]
name = "common"
version = "0.1.1"
edition = "2021"
authors = ["gaurav@mypass.id"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
actix-web = "4.0.0-rc.2"
actix-http = "3.0.0-rc.1"
awc = "3.0.0-beta.20"

# validation
validator = { version = "0.14.0", features = ["derive"] }


# events
cloudevents-sdk = "0.5"
mime = "0.3.16"

# message packing
serde = "1.0.115"
serde-aux = "3"
serde_json = "1.0"

# configuration
config = { version = "0.11", default-features = false, features = ["toml"] }

# tracing
tracing = "0.1.29"
tracing-log = "0.1.2"
tracing-appender = "0.2"
tracing-futures = "0.2"
opentelemetry = { version = "0.16", features = ["trace", "metrics", "rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = { version = "0.16" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"

# database
sqlx = { version = "0.5.10", features = ["runtime-actix-rustls", "uuid", "postgres", "chrono", "offline"], optional = true  }

# secrets management
vaultrs = "0.5.4"
secrecy = { version = "0.8", features = ["serde"] }

# mongodb
mongodb = { version = "2.1.0", optional = true, features = ["bson-chrono-0_4", "bson-uuid-0_8"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.15"

# cache
redis = { version = "0.21.5", features = ["tokio-comp"] }
deadpool-redis = { version = "0.10.2", features = ["serde"] }

# rest-calls
url = "2.2.1"

# misc
uuid = { version = "0.8.2", features = ["serde", "v4"] }
derive_more = "0.99.14"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
crossbeam-channel = "0.5.2"

[features]
postgres = ["sqlx"]
mongo = ["mongodb"]