[package]
name = "user-service"
version = "0.1.0"
edition = "2021"
authors = ["gaurav@mypass.id"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
actix-web = "4.0.0-beta.14"

# message packing
serde = "1.0.115"
serde-aux = "3"

# configuration
config = { version = "0.11", default-features = false, features = ["toml"] }
