[package]
name = "user-service"
version = "0.1.0"
edition = "2021"
authors = ["gaurav@mypass.id"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# common utils
common = { path = "../common"}

# web
actix-web = "4.0.0-beta.14"

# message packing
serde = "1.0.115"
serde-aux = "3"

# configuration
config = { version = "0.11", default-features = false, features = ["toml"] }

# tracing
tracing = "0.1.19"
opentelemetry = { version = "0.16", features = ["trace", "metrics", "rt-tokio-current-thread"] }
tracing-actix-web = { version = "0.5.0-beta.11", features = ["opentelemetry_0_16"] }
actix-web-opentelemetry = { version = "0.11.0-beta.7", features = ["metrics", "sync-middleware", "awc"] }


