[package]
name = "user-service"
version = "0.1.1"
edition = "2021"
authors = ["gaurav@mypass.id"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# common utils
[dependencies.common]
version = "^0"
path = "../common"
features = ["mongo"]

[dependencies]
# web
actix-web = "4.0.0-rc.2"
actix-http = "3.0.0-rc.1"
awc = "3.0.0-beta.20"

# secrets management
vaultrs = "0.5.4"
secrecy = { version = "0.8", features = ["serde"] }

# database
mongodb = { version = "2.1.0", features = ["bson-chrono-0_4", "bson-uuid-0_8"] }
bson = { version = "2.1.0", features = ["serde_with"] }
futures = "0.3.15"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

# cache
redis = { version = "0.21.5", features = ["tokio-comp"] }
deadpool-redis = { version = "0.10.2", features = ["serde"] }

# message packing
serde = "1.0.115"
serde-aux = "3"
serde_json = "1.0"
serde_with = "1.12.0"

# configuration
config = { version = "0.11", default-features = false, features = ["toml"] }

# tracing
tracing = "0.1.19"
opentelemetry = { version = "0.16", features = ["trace", "metrics", "rt-tokio-current-thread"] }
tracing-actix-web = { version = "0.5.0-beta.11", features = ["opentelemetry_0_16"] }
actix-web-opentelemetry = { version = "0.11.0-beta.7", features = ["metrics", "sync-middleware", "awc"] }

# validation
validator = { version = "0.14.0", features = ["derive"] }

# misc
chrono = { version = "0.4.19", features = ["serde"] }
itertools = "0.10.3"
strum = { version = "0.23", features = ["derive"] }
